# frontier-factory-bench

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  LICENSE-ASSETS  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: spec.yml
.github/workflows/: ci.yml
assets/: ASSET_PROVENANCE.md
docs/: compatibility.md  glossary.md
docs/planning/: REPO_BOOTSTRAP_AND_ACCEPTANCE.md
docs/reviews/: REVIEW_FINDINGS.md
docs/reviews/2026-07-21/: 01-fle-0.4.3-source-check.md  02-factorio-modding-feasibility.md
docs/specs/: SPEC_001_WALKING_SKELETON.md
mod/frontier_factory/: data.lua  info.json
scripts/: check_versions.py  package_mod.py
src/frontier_factory_bench/: __init__.py  _version.py  metadata.py
tests/unit/: test_metadata.py  test_mod_info.py  test_mod_package.py  test_version_check.py
